2020-06-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	The HTML part context menu was the last user of an event signal.

	* src/balsa-mime-widget-text.c (mwt_gesture_pressed_cb),
	(bm_widget_new_html):

2020-06-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-text: Use event-controllers instead of connecting to
	event signals.

	* src/balsa-mime-widget-text.c
	  (mwt_controller_motion_cb), (mwt_controller_leave_cb):
	    GtkEventControllerMotion callbacks;
	  (balsa_mime_widget_new_text): use event-controllers instead of connecting
	    to event signals;
	  (store_button_coords), (check_over_url), (check_call_url): new API.

2020-06-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget-image: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/balsa-mime-widget-image.c (balsa_image_button_press_cb),
	(balsa_mime_widget_new_image):

2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Connect to the "pressed" signal of a
	GtkGestureMultiPress instead of the "button-press-event" widget
	signal.

	* src/balsa-message.c (balsa_message_init),
	(tree_mult_selection_popup), (tree_button_press_cb):

2020-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Connect to the "focus-{in,out}" signals of a
	GtkEventControllerKey instead of the "focus-{in,out}-event" widget
	signals.

	This is preparation for GTK4, but will still need to be changed
	to use GtkEventControllerFocus in that distant future.

	* src/balsa-message.c (bm_header_tl_buttons), (balsa_message_init):
	* src/balsa-mime-widget-message.c (bm_header_widget_new):
	* src/balsa-mime-widget.c (balsa_mime_widget_new):
	* src/balsa-mime-widget-callbacks.c
	  (balsa_mime_widget_limit_focus),
	  (balsa_mime_widget_unlimit_focus): new signature;